--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-icons": "^5.5.0",
     "react-router": "^7.7.1",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
